meet patel changed the last change

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>a iphone 16 max to my friend meet</h2>
 
     <h1> IPhone 16 pro Max</h1>
+    <h2> jeckate to My repository friend</h2>
 
     
 </body>
